# ChangeLog for dev-libs/libgpg-error
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgpg-error/ChangeLog,v 1.55 2007/11/02 07:03:49 alonbl Exp $

*libgpg-error-1.6 (02 Nov 2007)

  02 Nov 2007; Alon Bar-Lev <alonbl@gentoo.org> +libgpg-error-1.6.ebuild:
  Version bump

  07 Jun 2007; Alon Bar-Lev <alonbl@gentoo.org>
  -files/libgpg-error-1.0-locale.h.patch, -files/libgpg-error-1.3-nls.patch,
  -libgpg-error-1.0-r1.ebuild, -libgpg-error-1.1.ebuild,
  -libgpg-error-1.3.ebuild, -libgpg-error-1.3-r1.ebuild,
  -libgpg-error-1.4.ebuild:
  Cleanup

  07 Jun 2007; Raúl Porcel <armin76@gentoo.org> libgpg-error-1.5.ebuild:
  alpha stable wrt #177743

  19 May 2007; Daniel Gryniewicz <dang@gentoo.org> libgpg-error-1.5.ebuild:
  Marked stable on amd64 for bug #177743

  13 May 2007; nixnut <nixnut@gentoo.org> libgpg-error-1.5.ebuild:
  Stable on ppc wrt bug 177743

  12 May 2007; Markus Rothe <corsair@gentoo.org> libgpg-error-1.5.ebuild:
  Stable on ppc64; bug #177743

  10 May 2007; Jeroen Roovers <jer@gentoo.org> libgpg-error-1.5.ebuild:
  Stable for HPPA (bug #177743).

  23 Apr 2007; Raúl Porcel <armin76@gentoo.org> libgpg-error-1.5.ebuild:
  x86 stable

  15 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  libgpg-error-1.5.ebuild:
  Stable on sparc

  25 Jan 2007; Alexander H. Færøy <eroyf@gentoo.org>
  libgpg-error-1.5.ebuild:
  Stable on MIPS.

*libgpg-error-1.5 (09 Dec 2006)

  09 Dec 2006; Alon Bar-Lev <alonbl@gentoo.org> +libgpg-error-1.5.ebuild:
  Version bump

*libgpg-error-1.4 (29 Oct 2006)

  29 Oct 2006; Alon Bar-Lev <alonbl@gentoo.org> +libgpg-error-1.4.ebuild:
  Version bump

  19 Oct 2006; Roy Marples <uberlord@gentoo.org> libgpg-error-1.3-r1.ebuild:
  Added ~sparc-fbsd keyword.

  14 Aug 2006; Daniel Black <dragonheart@gentoo.org>
  libgpg-error-1.0-r1.ebuild:
  WANT_AUTOCONF changed to 2.5 as per QA bug #143429

*libgpg-error-1.3-r1 (30 Jul 2006)
