@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/libgpg-error
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgpg-error/ChangeLog,v 1.55 2007/11/02 07:03:49 alonbl Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgpg-error/ChangeLog,v 1.56 2008/01/02 18:32:14 alonbl Exp $
+
+  02 Jan 2008; Alon Bar-Lev <alonbl@gentoo.org> libgpg-error-1.5.ebuild,
+  libgpg-error-1.6.ebuild:
+  Fix home page, bug#204078, thanks to Arfrever Frehtes Taifersar Arahesis
 
 *libgpg-error-1.6 (02 Nov 2007)
 
